--- a/css.css
+++ b/css.css
@@ -2,8 +2,8 @@ body{
 	
 font-family: "Helvetica", "Arial", fantasy;
 	
-color: #AAFF00;
-	background-color: #ADD3F9;
+color: #5add18;
+	background-color: #61175E;
 	
 text-shadow: 1px 1px #ff0000;
 	text-align: center;
